<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/characteristicContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/characteristicName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textStyle="bold"
        android:text="@string/characteristic_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/characteristicUUID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="@string/UUID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicName" />

    <TextView
        android:id="@+id/characteristicProperties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="@string/characteristic_properties"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicUUID" />

    <TextView
        android:id="@+id/characterDescriptors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/characteristic_descriptors"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicValue" />

    <TextView
        android:id="@+id/characteristicValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="@string/characteristic_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristicProperties" />

    <ImageView
        android:id="@+id/characteristic_name_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/characteristic_name_upload"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/characteristicName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <ImageView
        android:id="@+id/characteristic_name_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/characteristic_name_indicate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upload" />

    <ImageView
        android:id="@+id/characteristic_name_indicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/indicate" />

    <TextView
        android:id="@+id/characteristicUUIDvariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/characteristicUUID"
        app:layout_constraintTop_toBottomOf="@+id/characteristicName" />

    <TextView
        android:id="@+id/characteristicPropertiesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/characteristicProperties"
        app:layout_constraintTop_toBottomOf="@+id/characteristicUUIDvariable" />

    <TextView
        android:id="@+id/characteristicValueVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/characteristicValue"
        app:layout_constraintTop_toBottomOf="@+id/characteristicProperties" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterDescriptors">

        <include layout="@layout/layout_device_characteristic_descriptor_result"></include>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>