<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/descriptorContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/descriptorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/characteristic_descriptor_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterDescriptors" />

    <TextView
        android:id="@+id/descriptorUUIDtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="@string/UUID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptorName" />

    <TextView
        android:id="@+id/decriptorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="@string/characteristic_descriptor_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptorUUIDtitle" />

    <ImageView
        android:id="@+id/descriptor_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/descriptor_upload"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toEndOf="@+id/descriptorName"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <ImageView
        android:id="@+id/descriptor_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toStartOf="@+id/descriptor_indicate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/upload" />

    <ImageView
        android:id="@+id/descriptor_indicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/indicate" />

    <TextView
        android:id="@+id/descriptorUUIDvariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/descriptorUUIDtitle"
        app:layout_constraintTop_toBottomOf="@+id/descriptorName" />

    <TextView
        android:id="@+id/descriptorvalueVariable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/decriptorValue"
        app:layout_constraintTop_toBottomOf="@+id/descriptorUUIDvariable" />


</android.support.constraint.ConstraintLayout>